--- a/Parte10/psr_aula10_ex5/CMakeLists.txt
+++ b/Parte10/psr_aula10_ex5/CMakeLists.txt
@@ -10,7 +10,6 @@ project(psr_aula10_ex5)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
-  OpenCV
 )
 
 ## System dependencies are found with CMake's conventions
@@ -118,7 +117,6 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -147,10 +145,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}_node
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
- )
+#target_link_libraries(${PROJECT_NAME}_node
+#  ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
